--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -10,6 +10,10 @@ fr:
         restrict_dependent_destroy:
           has_one: "Vous ne pouvez pas supprimer l'enregistrement car une personne à charge %{record} existe"
           has_many: "Vous ne pouvez pas supprimer l'enregistrement parce que les %{record} dépendants existent"
+    models:
+      recipe: "Recette"
+      ingredient: "Ingrédient"
+      category: "Catégorie"
   date:
     abbr_day_names:
     - dim
